@@ -1,7 +1,7 @@
 //
 // DialogSocketTest.cpp
 //
-// $Id: //poco/1.3/Net/testsuite/src/DialogSocketTest.cpp#1 $
+// $Id: //poco/1.3/Net/testsuite/src/DialogSocketTest.cpp#2 $
 //
 // Copyright (c) 2005-2006, Applied Informatics Software Engineering GmbH.
 // and Contributors.
@@ -36,6 +36,7 @@
 #include "EchoServer.h"
 #include "Poco/Net/DialogSocket.h"
 #include "Poco/Net/SocketAddress.h"
+#include <cstring>
 
 
 using Poco::Net::DialogSocket;
@@ -94,6 +95,20 @@ void DialogSocketTest::testDialogSocket()
 	status = ds.receiveStatusMessage(str);
 	assert (status == 0);
 	assert (str == "Hello, world!");
+	
+	ds.sendString("Header\nMore Bytes");
+	status = ds.receiveStatusMessage(str);
+	assert (status == 0);
+	assert (str == "Header");
+	char buffer[16];
+	int n = ds.receiveRawBytes(buffer, sizeof(buffer));
+	assert (n == 10);
+	assert (std::memcmp(buffer, "More Bytes", 10) == 0);
+
+	ds.sendString("Even More Bytes");
+	n = ds.receiveRawBytes(buffer, sizeof(buffer));
+	assert (n == 15);
+	assert (std::memcmp(buffer, "Even More Bytes", 15) == 0);
 }
 
 
