@@ -1,7 +1,7 @@
 //
 // CodeWriter.cpp
 //
-// $Id: //poco/1.3/PageCompiler/src/CodeWriter.cpp#4 $
+// $Id: //poco/1.3/PageCompiler/src/CodeWriter.cpp#5 $
 //
 // Copyright (c) 2008, Applied Informatics Software Engineering GmbH.
 // and Contributors.
@@ -197,7 +197,7 @@ void CodeWriter::writeHandlerClass(std::ostream& ostr)
 {
 	std::string base(_page.get("page.baseClass", "Poco::Net::HTTPRequestHandler"));
 	std::string ctorArg;
-	ctorArg = _page.get("page.ctorArg", "");
+	ctorArg = _page.get("page.context", _page.get("page.ctorArg", ""));
 
 	handlerClass(ostr, base, ctorArg);
 }
@@ -205,6 +205,19 @@ void CodeWriter::writeHandlerClass(std::ostream& ostr)
 
 void CodeWriter::writeHandlerMembers(std::ostream& ostr)
 {
+	std::string context(_page.get("page.context", ""));
+	if (!context.empty())
+	{
+		ostr << "\n";
+		ostr << "protected:\n";
+		ostr << "\t" << context << " context() const\n";
+		ostr << "\t{\n";
+		ostr << "\t\treturn _context;\n";
+		ostr << "\t}\n";
+		ostr << "\n";
+		ostr << "private:\n";
+		ostr << "\t" << context << " _context;\n";
+	}
 }
 
 
@@ -224,8 +237,16 @@ void CodeWriter::writeImplIncludes(std::ostream& ostr)
 void CodeWriter::writeConstructor(std::ostream& ostr)
 {
 	std::string base(_page.get("page.baseClass", "Poco::Net::HTTPRequestHandler"));
+	std::string context(_page.get("page.context", ""));
 	std::string ctorArg(_page.get("page.ctorArg", ""));
-	if (!ctorArg.empty())
+	if (!context.empty())
+	{
+		ostr << _class << "::" << _class << "(" << context << " context):\n";
+		ostr << "\t_context(context)\n";
+		ostr << "{\n}\n";
+		ostr << "\n\n";
+	}
+	else if (!ctorArg.empty())
 	{
 		ostr << _class << "::" << _class << "(" << ctorArg << " arg):\n";
 		ostr << "\t" << base << "(arg)\n";
